Package: wyntonquery

Version: 0.0.0-9006 [2021-06-16]

NEW FEATURES:

 * Add read_qstat() for getting information on the jobs currently on the
   SGE queue.
 
DOCUMENTATION:

 * Add vignettes 'SGE Accounting File' and 'Jobs on the SGE queue'.
 

Version: 0.0.0-9005 [2021-05-05]

NEW FEATURES:

 * Add write_raw_sge_accounting().

 * Add anonymize_raw_sge_accounting().

 * Now read_raw_sge_accounting() records file header in attribute 'header'.

 * Added an example SGE 'accounting' file and examples how to process it.


Version: 0.0.0-9004 [2021-01-25]

NEW FEATURES:

 * Add job_summary_by_status().
 

Version: 0.0.0-9003 [2020-04-04]

NEW FEATURES:

 * Add parse_category() for 'sge_accounting' objects.
 
DOCUMENTATION:

 * Expand example of read_sge_accounting() to display how to inspect how
   much CPU time was spent on successful and failed jobs.

BUG FIXES:

 * Package did not pass 'R CMD check --as-cran' on systems without 'qhost'.
 

Version: 0.0.0-9002 [2019-08-06]

NEW FEATURES:

 * Add sge_accounting_file() and read_sge_accounting().

 * Renamed host_table() column '# Physical Cores' to 'Physical Cores' so
   that it does not conflict with '#'-comment lines in tab-delimited files.
   

Version: 0.0.0-9001 [2019-06-06]

SIGNIFICIANT CHANGES:

 * The system("scripts", "system_info.R", package="wyntonquery") script is
   now robust against errors; if there's an error querying a particular host,
   then that host is dropped from the final out.

 * The system("scripts", "system_info.R", package="wyntonquery") script now
   caches results from individual compute nodes.

 * host_info() now reports on 'cpu_model', which corresponds to the cpu_info()
   field 'model_name', e.g. "Intel(R) Core(TM) i7-8650U CPU @ 1.90GHz".
   Previously, it tried to report on the CPU speed but that fluctuated from
   run to run because it was incorrectly inferred from the 'cpu_mhz' field.

NEW FEATURES:

 * on_hostname() gained argument 'cache' for controlling whether cached results