@@ -1,10 +1,14 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(anonymize,data.frame)
+S3method(anonymize,qstat)
+S3method(anonymize,raw_sge_accounting)
 S3method(as_sge_accounting,raw_sge_accounting)
 S3method(available,queues)
 S3method(parse_category,sge_accounting)
 S3method(print,sge_accounting)
-export(anonymize_raw_sge_accounting)
+export(anonymize)
+export(anonymize_qstat)
 export(as_sge_accounting)
 export(available)
 export(cpu_info)
